# platform.core.base.bundle

./: AUTHORS  CMakeLists.txt  README  bundle.pc.in  test.sh
TC/: execute.sh
TC/unit/: Makefile  tslist  utc_ApplicationFW_bundle_add_func.c  utc_ApplicationFW_bundle_create_func.c  utc_ApplicationFW_bundle_decode_func.c  utc_ApplicationFW_bundle_del_func.c  utc_ApplicationFW_bundle_dup_func.c  utc_ApplicationFW_bundle_encode_func.c  utc_ApplicationFW_bundle_free_func.c  utc_ApplicationFW_bundle_get_count_func.c  utc_ApplicationFW_bundle_get_val_func.c  utc_ApplicationFW_bundle_iterate_func.c
debian/: changelog  control  rules
doc/: bundle_doc.h
include/: SLP_bundle_PG.h  bundle.h  bundle_internal.h  bundle_log.h  keyval.h  keyval_array.h  keyval_type.h
packaging/: bundle.changes  bundle.spec
src/: bundle.c  bundle_json.c  keyval.c  keyval_array.c  keyval_type.c
test/: CMakeLists.txt  Makefile  TC_bundle.c  test_bundle.c
